[project]
name = "itinerarywatch"
version = "0.1.0"
requires-python = ">=3.14.6"
dependencies = [
    "aws-lambda-powertools[parser]>=3.29.0",
    "boto3>=1.43.37",
    "boto3-stubs>=1.43.37",
    "botocore>=1.43.37",
    "psycopg[binary]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "requests>=2.34.2",
]
